# RVNLauncher

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/src/: database.rs
src-tauri/app/src/commands/: scanner.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icons.rar
src-tauri/prisma/: launcher.db  launcher.db-journal  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/app/src/: prisma.rs
src-tauri/prisma/migrations/20250928091017_init/: migration.sql
src-tauri/prisma/migrations/20250928091041_add_completion_procent/: migration.sql
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/commands/: backups.rs  mod.rs
src/components/: ActionMenu.tsx  ConfirmModal.tsx  GameActions.tsx  GameCard.tsx  GameFolderManager.tsx  GameGrid.tsx  GameHeader.tsx  GameMetadata.tsx  GamePageTabs.tsx  GameSavesManager.tsx  Layout.tsx  LibraryHeader.tsx  PosterGameCard.tsx  ProfileMenu.tsx  RecentGameCard.tsx  RestoreStrategyModal.tsx  StarRating.tsx  ThemeSwitcherModal.tsx
src/context/: ConfirmContext.tsx  GameSessionContext.tsx
src/hooks/: useFolders.ts  useGameDetails.ts  useGames.ts  useTheme.ts
src/pages/: AllGamesPage.tsx  FolderPage.tsx  GamePage.tsx  Library.tsx  LibraryPage.tsx  SettingsPage.tsx
src/utils/: backups.ts  db.ts  formatters.ts  game-scanner.ts  gradient-generator.ts  icon-manager.ts  image.ts  start-game.ts  (+1 more)
(+3 files in other folders)
