[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Указываем, что нам нужен только SQLite, чтобы ускорить компиляцию
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }